syntax = "proto3";

package game_server;

import "google/protobuf/struct.proto";
import "google/protobuf/timestamp.proto";

service GameService {

  rpc Register(RegisterRequest) returns (RegisterResponse);
  rpc Heartbeat(stream HeartbeatRequest) returns (stream HeartbeatResponse);

}

message RegisterRequest {
  string container_id = 1;
  repeated string tags = 2;
}

message RegisterResponse {
  string id = 1;
}

message UnregisterResponse {
  string id = 1;
}

message HeartbeatRequest {
  string server_id = 1;
  float capacity = 2;
}

message SubscribeRequest {
  string server_id = 1;
}

message HeartbeatResponse {
  bool success = 1;
}

